desafio primera bbdd

--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "handlebars": "^4.7.7",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
+    "knex": "^2.3.0",
     "minimatch": "^5.1.0",
     "minimist": "^1.2.6",
+    "mysql": "^2.18.1",
     "neo-async": "^2.6.2",
     "once": "^1.4.0",
     "socket.io": "^4.5.2",
     "source-map": "^0.6.1",
+    "sqlite3": "^5.1.2",
     "uglify-js": "^3.17.2",
     "wordwrap": "^1.0.0",
     "wrappy": "^1.0.2"
