--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "balanced-match": "^1.0.2",
     "brace-expansion": "^2.0.1",
     "express": "^4.18.1",
@@ -17,8 +19,11 @@
     "knex": "^2.3.0",
     "minimatch": "^5.1.0",
     "minimist": "^1.2.6",
+    "mogoose": "^0.0.1-security",
+    "mongoose": "^6.7.2",
     "mysql": "^2.18.1",
     "neo-async": "^2.6.2",
+    "normalizr": "^3.6.2",
     "once": "^1.4.0",
     "socket.io": "^4.5.2",
     "source-map": "^0.6.1",
