--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@faker-js/faker": "^7.6.0",
     "balanced-match": "^1.0.2",
     "brace-expansion": "^2.0.1",
+    "connect-mongo": "^4.6.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "fs.realpath": "^1.0.0",
     "glob": "^8.0.3",
     "graceful-fs": "^4.2.10",
