--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "balanced-match": "^1.0.2",
+    "bcrypt": "^5.1.0",
     "brace-expansion": "^2.0.1",
     "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
@@ -27,6 +29,8 @@
     "neo-async": "^2.6.2",
     "normalizr": "^3.6.2",
     "once": "^1.4.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.5.2",
     "source-map": "^0.6.1",
     "sqlite3": "^5.1.2",
