--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "brace-expansion": "^2.0.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
@@ -22,7 +23,7 @@
     "inherits": "^2.0.4",
     "knex": "^2.3.0",
     "minimatch": "^5.1.0",
-    "minimist": "^1.2.6",
+    "minimist": "^1.2.7",
     "mogoose": "^0.0.1-security",
     "mongoose": "^6.7.2",
     "mysql": "^2.18.1",
