desafio loggers, profiling

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "type": "module",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "autocannon": "^7.10.0",
     "balanced-match": "^1.0.2",
     "bcrypt": "^5.1.0",
     "brace-expansion": "^2.0.1",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -22,6 +24,7 @@
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "knex": "^2.3.0",
+    "log4js": "^6.7.1",
     "minimatch": "^5.1.0",
     "minimist": "^1.2.7",
     "mogoose": "^0.0.1-security",
