--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "fs.realpath": "^1.0.0",
     "glob": "^8.0.3",
     "graceful-fs": "^4.2.10",
+    "graphql": "^16.6.0",
     "handlebars": "^4.7.7",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
