--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "knex": "^2.3.0",
+    "koa": "^2.14.1",
+    "koa-body": "^6.0.1",
+    "koa-ejs": "^4.3.0",
+    "koa-html-template": "^1.0.0",
+    "koa-passport": "^6.0.0",
+    "koa-router": "^12.0.0",
+    "koa-session": "^6.4.0",
     "log4js": "^6.7.1",
     "minimatch": "^5.1.0",
     "minimist": "^1.2.7",
